Projet total/Assembleur/tests/good/testfile-good-space.ms
    .section data
x:
y:
    .space 4
34z:
    .space 2

    .section text
    add %rax %rbx 42
L0:
    sub %rax %rbx 42